# gridfm-graphkit

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  COMMITTERS.csv  CONTRIBUTING.md  Dockerfile  README.md  RELEASE.md  SECURITY.md  feature-proposal.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci-build.yaml  release.yaml
docs/datasets/: data_modules.md  data_normalization.md  powergrid.md  transforms.md
docs/install/: installation.md
docs/models/: models.md
docs/quick_start/: quick_start.md  yaml_config.md
docs/tasks/: base_task.md  feature_reconstruction.md  opf_metric_aggregation.md  optimal_power_flow.md  power_flow.md  reconstruction_task.md  state_estimation.md
docs/training/: loss.md
examples/config/: GRIT_PF_datakit_case14.yaml  GRIT_PF_datakit_case14_topk_rrwp.yaml  HGNS_OPFData_case118.yaml  HGNS_OPFData_case14.yaml  HGNS_OPFData_case2000.yaml  HGNS_OPFData_case30.yaml  HGNS_OPFData_case500.yaml  HGNS_OPFData_case57.yaml  HGNS_OPF_Ola_case118.yaml  HGNS_OPF_Ola_case14.yaml  HGNS_OPF_Ola_case2000.yaml  HGNS_OPF_Ola_case30.yaml  HGNS_OPF_Ola_case500.yaml  HGNS_OPF_Ola_case57.yaml  HGNS_OPF_datakit_case118.yaml  HGNS_OPF_datakit_case14.yaml  HGNS_OPF_datakit_case2000.yaml  HGNS_OPF_datakit_case30.yaml  HGNS_OPF_datakit_case500.yaml  HGNS_OPF_datakit_case57.yaml  HGNS_PF_datakit_case118.yaml  HGNS_PF_datakit_case14.yaml  HGNS_PF_datakit_case2000.yaml  HGNS_PF_datakit_case30.yaml  HGNS_PF_datakit_case500.yaml  HGNS_PF_datakit_case57.yaml  HGNS_PF_datakit_caseTexas.yaml  HGNS_PF_pfdelta_case118.yaml  HGNS_SE_datakit_case118.yaml  HGNS_SE_datakit_case14.yaml  grit_pretraining.yaml
examples/notebooks/: Tutorial_contingency_analisys.ipynb  (+1 more)
gridfm_graphkit/: __init__.py  __main__.py  cli.py
gridfm_graphkit/datasets/: rrwp.py  (+11 more)
integrationtests/: conftest.py  generate_test_data.py  test_base_set.py
scripts/: benchmark_model_inference.py  run_benchmark.sh
tests/: conftest.py  test_node_rank.py  test_pipeline.py
(+34 files in other folders)
