[build-system]
requires = ["setuptools >= 83.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gridfm_graphkit*"]
namespaces = false

[project]
name = "gridfm-graphkit"
description = "Grid Foundation Model"
version = "0.8.1"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10,<3.13"

authors = [
  {name = "Matteo Mazzonelli", email = "matteo.mazzonelli1@ibm.com"},
  {name = "Alban Puech", email = "apuech@seas.harvard.edu"},
  {name = "Tamara Govindasamy", email= "tamara.govindasamy@ibm.com"},
  {name = "Mangaliso Mngomezulu", email= "mngomezulum@ibm.com"},
  {name = "Etienne Vos", email= "etienne.vos@ibm.com"},
  {name = "Celia Cintas", email= "celia.cintas@ibm.com"},
  {name = "Jonas Weiss", email= "jwe@zurich.ibm.com"},
]

maintainers = [
  {name = "Matteo Mazzonelli", email = "matteo.mazzonelli1@ibm.com"},
]

keywords = ["electric power grid", "foundational model", "graph neural networks"]

classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]


dependencies = [
    "mlflow>=3.1.0",
    "nbformat>=5.10.4",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "opt-einsum>=3.3.0",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "pyyaml>=6.0.2",
    "torch>=2.10,<2.13",
    "torch-geometric>=2.6.1",
    "torchaudio>=2.10",
    "torchvision>=0.25",
    "lightning",
    "seaborn",
    "urllib3>=2.6.0",
    "gdown>=6.0.0",
    "gridfm-datakit==1.0.5",
]

[project.optional-dependencies]
dev = [
  "mkdocs-material",
  "mkdocstrings[python]",
  "pre-commit",
  "bandit",
  "build"
]

test = [
  "pytest",
  "pytest-cov"
]

[project.scripts]
gridfm_graphkit = "gridfm_graphkit.__main__:main"
